# MonitoringBattery

./: .gitignore  README.md  docker-compose.yml
back/: Dockerfile  pyproject.toml
back/app/: main.py  migrate_db.sh  seed_data.py
back/app/api/v1/routers/: auth.py  battery.py  device.py  users.py
back/app/auth/: dependencies.py  hashing.py  jwt.py
back/app/core/: config.py  database.py
back/app/migrations/: env.py
back/app/migrations/versions/: a4e96569265b_initial_migration.py
back/app/models/: __init__.py  base.py  battery.py  device.py  refresh_token.py  user.py
back/app/repositories/: auth.py  base.py  battery.py  device.py  user.py
back/app/schemas/: auth.py  battery.py  device.py  user.py
back/app/services/: auth_service.py  battery_service.py  device_service.py
env_file/: .env.example
front/monitoring-battery/: Dockerfile  index.html  package-lock.json  package.json
front/monitoring-battery/src/: App.jsx  index.css
front/monitoring-battery/src/api/: api.js
front/monitoring-battery/src/components/: BatteryTable.jsx  DeviceTable.jsx  LoginComponent.jsx
front/monitoring-battery/src/context/: AuthContext.jsx
front/monitoring-battery/src/pages/: Dashboard.jsx  LoginPage.jsx  RegisterPage.jsx
front/monitoring-battery/src/routes/: PrivateRoute.jsx
